Merged revisions 15709 via svnmerge from https://mifos.dev.java.net/svn/mifos/branches/woodlocks
........
  r15709 | keithwoodlock | 2009-09-04 00:05:01 -0700 (Fri, 04 Sep 2009) | 7 lines
  
  #2116 - collection sheet refactoring: continued with writing collectionSheetDao with methods to improve fetching of data for display in frontend.  Created a simpler DTO model to represent this data for use on frontend. For now we are simply just going to translate this newer DTO model to the older 'View' model.
  
  An important change in achieving this was removing the coupling between CustomerAccount.makePayment and the need to know installment/schedules by installmentId.
  
  ConfigurationLocatorTest was failing for me so fixed it up to pass.
  
  Please merge all changes into trunk.
........


git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@15714 a8845c50-7012-0410-95d3-8e1449b9b1e4